--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </div>
   </main>
-  <footer>Developed By <a href="https://github.com/OmarElbedwehy" target="_blank">Omar Elbedwehy</a></footer>
+  <!--<footer>Developed By <a href="https://github.com/OmarElbedwehy" target="_blank">Omar Elbedwehy</a></footer>-->
   <script src="./main.js"></script>
 </body>
 
